src/comp/CompilerParser.java
// Generated from /home/overnull/trabalhoSD/Compiler/src/Compiler.g4 by ANTLR 4.7.2
package comp;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, RETURN=3, WHILE=4, BREAK=5, INT=6, VOID=7, BOOL=8, CHAR=9, 
		STRUCT=10, CONST=11, PUBLIC=12, PROTECTED=13, STATIC=14, COM=15, PLUS=16, 
		MINUS=17, TIMES=18, DIV=19, MOD=20, INCR=21, DECR=22, ATRIB=23, EQ=24, 
		NEQ=25, LT=26, LEQ=27, GT=28, GEQ=29, NOT=30, AND=31, OR=32, DOT=33, ARROW=34, 
		DBLCOL=35, LPAREN=36, RPAREN=37, LBRACE=38, RBRACE=39, DQUO=40, SQUO=41, 
		STDCIN=42, STDCOUT=43, STDENDL=44, INTL=45, CHARL=46, STRL=47, ID=48, 
		COMMA=49, SEMI=50, LSHIFT=51, RSHIFT=52, AMPER=53, COLON=54, DIR=55, WHITE=56, 
		TRUE=57, FALSE=58, THIS=59;
	public static final int
		RULE_start = 0, RULE_lista_definicoes = 1, RULE_definicao = 2, RULE_estrutura = 3, 
		RULE_lista_estrutura_corpo = 4, RULE_estrutura_acesso = 5, RULE_lista_estrutura_membros = 6, 
		RULE_membro = 7, RULE_variavel = 8, RULE_variavel_atribuicao = 9, RULE_construtor = 10, 
		RULE_metodo = 11, RULE_funcao = 12, RULE_funcao_cabecalho = 13, RULE_parametros_formais = 14, 
		RULE_lista_parametros_formais = 15, RULE_tipo = 16, RULE_tipo_nome = 17, 
		RULE_qualificador = 18, RULE_decorador = 19, RULE_bloco = 20, RULE_lista_comandos = 21, 
		RULE_comando = 22, RULE_selecao = 23, RULE_selecao_senao = 24, RULE_repeticao = 25, 
		RULE_atribuicao = 26, RULE_retorno = 27, RULE_entrada = 28, RULE_lista_entrada_params = 29, 
		RULE_saida = 30, RULE_lista_saida_params = 31, RULE_lista_declaracoes_locais = 32, 
		RULE_expressao_comando = 33, RULE_expressao = 34, RULE_operador_binario = 35, 
		RULE_operador_unario = 36, RULE_nome = 37, RULE_nome_lista = 38, RULE_parametros_reais = 39, 
		RULE_lista_parametros_reais = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "lista_definicoes", "definicao", "estrutura", "lista_estrutura_corpo", 
			"estrutura_acesso", "lista_estrutura_membros", "membro", "variavel", 
			"variavel_atribuicao", "construtor", "metodo", "funcao", "funcao_cabecalho", 
			"parametros_formais", "lista_parametros_formais", "tipo", "tipo_nome", 
			"qualificador", "decorador", "bloco", "lista_comandos", "comando", "selecao", 
			"selecao_senao", "repeticao", "atribuicao", "retorno", "entrada", "lista_entrada_params", 
			"saida", "lista_saida_params", "lista_declaracoes_locais", "expressao_comando", 
			"expressao", "operador_binario", "operador_unario", "nome", "nome_lista", 
			"parametros_reais", "lista_parametros_reais"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'return'", "'while'", "'break'", "'int'", "'void'", 
			"'boolean'", "'char'", "'struct'", "'const'", "'public'", "'protected'", 
			"'static'", null, "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
			"'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'&&'", "'||'", 
			"'.'", "'->'", "'::'", "'('", "')'", "'{'", "'}'", "'\"'", "'''", "'std::cin'", 
			"'std::cout'", "'std::endl'", null, null, null, null, "','", "';'", "'<<'", 
			"'>>'", "'&'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "RETURN", "WHILE", "BREAK", "INT", "VOID", "BOOL", 
			"CHAR", "STRUCT", "CONST", "PUBLIC", "PROTECTED", "STATIC", "COM", "PLUS", 
			"MINUS", "TIMES", "DIV", "MOD", "INCR", "DECR", "ATRIB", "EQ", "NEQ", 
			"LT", "LEQ", "GT", "GEQ", "NOT", "AND", "OR", "DOT", "ARROW", "DBLCOL", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "DQUO", "SQUO", "STDCIN", "STDCOUT", 
			"STDENDL", "INTL", "CHARL", "STRL", "ID", "COMMA", "SEMI", "LSHIFT", 
			"RSHIFT", "AMPER", "COLON", "DIR", "WHITE", "TRUE", "FALSE", "THIS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Compiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Lista_definicoesContext lista_definicoes() {
			return getRuleContext(Lista_definicoesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CompilerParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			lista_definicoes(0);
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_definicoesContext extends ParserRuleContext {
		public DefinicaoContext definicao() {
			return getRuleContext(DefinicaoContext.class,0);
		}
		public Lista_definicoesContext lista_definicoes() {
			return getRuleContext(Lista_definicoesContext.class,0);
		}
		public Lista_definicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_definicoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterLista_definicoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitLista_definicoes(this);
		}
	}

	public final Lista_definicoesContext lista_definicoes() throws RecognitionException {
		return lista_definicoes(0);
	}

	private Lista_definicoesContext lista_definicoes(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_definicoesContext _localctx = new Lista_definicoesContext(_ctx, _parentState);
		Lista_definicoesContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_lista_definicoes, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			definicao();
			}
			_ctx.stop = _input.LT(-1);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_definicoesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_definicoes);
					setState(88);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(89);
					definicao();
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DefinicaoContext extends ParserRuleContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public EstruturaContext estrutura() {
			return getRuleContext(EstruturaContext.class,0);
		}
		public DefinicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterDefinicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitDefinicao(this);
		}
	}

	public final DefinicaoContext definicao() throws RecognitionException {
		DefinicaoContext _localctx = new DefinicaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicao);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case VOID:
			case BOOL:
			case CHAR:
			case CONST:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				funcao();
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				estrutura();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturaContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(CompilerParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(CompilerParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(CompilerParser.LBRACE, 0); }
		public Lista_estrutura_corpoContext lista_estrutura_corpo() {
			return getRuleContext(Lista_estrutura_corpoContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CompilerParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(CompilerParser.SEMI, 0); }
		public EstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterEstrutura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitEstrutura(this);
		}
	}

	public final EstruturaContext estrutura() throws RecognitionException {
		EstruturaContext _localctx = new EstruturaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estrutura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(STRUCT);
			setState(100);
			match(ID);
			setState(101);
			match(LBRACE);
			setState(102);
			lista_estrutura_corpo(0);
			setState(103);
			match(RBRACE);
			setState(104);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_estrutura_corpoContext extends ParserRuleContext {
		public Estrutura_acessoContext estrutura_acesso() {
			return getRuleContext(Estrutura_acessoContext.class,0);
		}
		public Lista_estrutura_corpoContext lista_estrutura_corpo() {
			return getRuleContext(Lista_estrutura_corpoContext.class,0);
		}
		public Lista_estrutura_corpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_estrutura_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterLista_estrutura_corpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitLista_estrutura_corpo(this);
		}
	}

	public final Lista_estrutura_corpoContext lista_estrutura_corpo() throws RecognitionException {
		return lista_estrutura_corpo(0);
	}

	private Lista_estrutura_corpoContext lista_estrutura_corpo(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_estrutura_corpoContext _localctx = new Lista_estrutura_corpoContext(_ctx, _parentState);
		Lista_estrutura_corpoContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_lista_estrutura_corpo, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(107);
			estrutura_acesso();
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_estrutura_corpoContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_estrutura_corpo);
					setState(109);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(110);
					estrutura_acesso();
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Estrutura_acessoContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(CompilerParser.PUBLIC, 0); }
		public TerminalNode COLON() { return getToken(CompilerParser.COLON, 0); }
		public Lista_estrutura_membrosContext lista_estrutura_membros() {
			return getRuleContext(Lista_estrutura_membrosContext.class,0);
		}
		public TerminalNode PROTECTED() { return getToken(CompilerParser.PROTECTED, 0); }
		public Estrutura_acessoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura_acesso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterEstrutura_acesso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitEstrutura_acesso(this);
		}
	}

	public final Estrutura_acessoContext estrutura_acesso() throws RecognitionException {
		Estrutura_acessoContext _localctx = new Estrutura_acessoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_estrutura_acesso);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PUBLIC:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(PUBLIC);
				setState(117);
				match(COLON);
				setState(118);
				lista_estrutura_membros(0);
				}
				break;
			case PROTECTED:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(PROTECTED);
				setState(120);
				match(COLON);
				setState(121);
				lista_estrutura_membros(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_estrutura_membrosContext extends ParserRuleContext {
		public MembroContext membro() {
			return getRuleContext(MembroContext.class,0);
		}
		public Lista_estrutura_membrosContext lista_estrutura_membros() {
			return getRuleContext(Lista_estrutura_membrosContext.class,0);
		}
		public Lista_estrutura_membrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_estrutura_membros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterLista_estrutura_membros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitLista_estrutura_membros(this);
		}
	}

	public final Lista_estrutura_membrosContext lista_estrutura_membros() throws RecognitionException {
		return lista_estrutura_membros(0);
	}

	private Lista_estrutura_membrosContext lista_estrutura_membros(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Lista_estrutura_membrosContext _localctx = new Lista_estrutura_membrosContext(_ctx, _parentState);
		Lista_estrutura_membrosContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_lista_estrutura_membros, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125);
			membro();
			}
			_ctx.stop = _input.LT(-1);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_estrutura_membrosContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_lista_estrutura_membros);
					setState(127);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(128);
					membro();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MembroContext extends ParserRuleContext {
		public ConstrutorContext construtor() {
			return getRuleContext(ConstrutorContext.class,0);
		}
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(CompilerParser.STATIC, 0); }
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public MembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_membro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterMembro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitMembro(this);
		}
	}

	public final MembroContext membro() throws RecognitionException {
		MembroContext _localctx = new MembroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_membro);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				construtor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				variavel();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				metodo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				match(STATIC);
				setState(138);
				variavel();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				match(STATIC);
				setState(140);
				funcao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariavelContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(CompilerParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(CompilerParser.SEMI, 0); }
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitVariavel(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			tipo();
			setState(144);
			match(ID);
			setState(145);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variavel_atribuicaoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(CompilerParser.ID, 0); }
		public TerminalNode ATRIB() { return getToken(CompilerParser.ATRIB, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CompilerParser.SEMI, 0); }
		public Variavel_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterVariavel_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitVariavel_atribuicao(this);
		}
	}

	public final Variavel_atribuicaoContext variavel_atribuicao() throws RecognitionException {
		Variavel_atribuicaoContext _localctx = new Variavel_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variavel_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			tipo();
			setState(148);
			match(ID);
			setState(149);
			match(ATRIB);
			setState(150);
			expressao(0);
			setState(151);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrutorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompilerParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(CompilerParser.LPAREN, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CompilerParser.RPAREN, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ConstrutorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construtor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterConstrutor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitConstrutor(this);
		}
	}
